// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home "" Render home page 1`] = `
<DocumentFragment>
  <div
    class="home"
  >
    <div
      class="af-title-bar"
    >
      <div
        class="container af-title-bar__wrapper"
      >
        <h1
          class="af-title-bar__title"
        >
          Accueil
        </h1>
      </div>
    </div>
    <div
      class="home__links-container"
    />
    <p>
      Vous n'avez aucun rôle attribué à votre profile.
    </p>
  </div>
</DocumentFragment>
`;

exports[`Home "ECOTAG_ANNOTATEUR" Render home page 1`] = `
<DocumentFragment>
  <div
    class="home"
  >
    <div
      class="af-title-bar"
    >
      <div
        class="container af-title-bar__wrapper"
      >
        <h1
          class="af-title-bar__title"
        >
          Accueil
        </h1>
      </div>
    </div>
    <div
      class="home__links-container"
    >
      <a
        class="home__link"
        href="/projects"
      >
        <div
          class="home__link-container home__link-container--projects"
        >
          Projets
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Home "ECOTAG_DATA_SCIENTIST,ECOTAG_ANNOTATEUR" Render home page 1`] = `
<DocumentFragment>
  <div
    class="home"
  >
    <div
      class="af-title-bar"
    >
      <div
        class="container af-title-bar__wrapper"
      >
        <h1
          class="af-title-bar__title"
        >
          Accueil
        </h1>
      </div>
    </div>
    <div
      class="home__links-container"
    >
      <a
        class="home__link"
        href="/projects"
      >
        <div
          class="home__link-container home__link-container--projects"
        >
          Projets
        </div>
      </a>
      <a
        class="home__link"
        href="/datasets"
      >
        <div
          class="home__link-container home__link-container--datasets"
        >
          Datasets
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Home "ECOTAG_DATA_SCIENTIST,ECOTAG_ANNOTATEUR,ECOTAG_ADMINISTRATEUR" Render home page 1`] = `
<DocumentFragment>
  <div
    class="home"
  >
    <div
      class="af-title-bar"
    >
      <div
        class="container af-title-bar__wrapper"
      >
        <h1
          class="af-title-bar__title"
        >
          Accueil
        </h1>
      </div>
    </div>
    <div
      class="home__links-container"
    >
      <a
        class="home__link"
        href="/projects"
      >
        <div
          class="home__link-container home__link-container--projects"
        >
          Projets
        </div>
      </a>
      <a
        class="home__link"
        href="/datasets"
      >
        <div
          class="home__link-container home__link-container--datasets"
        >
          Datasets
        </div>
      </a>
      <a
        class="home__link"
        href="/groups"
      >
        <div
          class="home__link-container home__link-container--groups"
        >
          Equipe
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
